# gifted-children-helper

./: .dockerignore  .env  .env_template  .gitignore  .webui_secret_key  Dockerfile  LICENSE  README.md  case.lst  client_secret.json  packages.txt  pyproject.toml  requirements.txt  startup.sh  todo.lst  vercel.json
.devcontainer/: devcontainer.json
.github/workflows/: bump_version.yml  docker-build.yml
embeddings/: snowflake-arctic-embed2_1e084ddcdb626d85292fdbd927c62283_index.pkl  snowflake-arctic-embed2_64932f393f18911efea1827b724be456_index.pkl  snowflake-arctic-embed2_a4e36c937a461e67595b3e3167207d0a_index.pkl  snowflake-arctic-embed2_ddb1c7431f1b3a3cb7e8b527639abaaa_index.pkl  snowflake-arctic-embed2_f3f9640cbbf72bd3f14d1ca6bf066bf1_index.pkl  text-embedding-3-small_1e084ddcdb626d85292fdbd927c62283_index.pkl  text-embedding-3-small_64932f393f18911efea1827b724be456_index.pkl  text-embedding-3-small_a4e36c937a461e67595b3e3167207d0a_index.pkl  text-embedding-3-small_ddb1c7431f1b3a3cb7e8b527639abaaa_index.pkl  text-embedding-3-small_f3f9640cbbf72bd3f14d1ca6bf066bf1_index.pkl
gifted-children-helper-backend/fastapi/: app.py
gifted-children-helper-frontend/: .env  README.md  nuxt.config.js  package-lock.json  package.json
gifted-children-helper-frontend/components/: EntryForm.vue  (+3 more)
logs/: activity_planning_assessment.md  clinical_psychology_assessment.md  educational_psychology_assessment.md  family_therapy_assessment.md  initial_case_evaluation.md  last_report.md  neurological_assessment.md  occupational_therapy_assessment.md  report-2024-12-20-18-28.md
(+29 files in other folders)
